--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav id="assigment">
+		
+		<ul>
+			<a href="https://course.acciojob.com/journey">Home</a></br>
+			<a href="https://course.acciojob.com/journey">About us</a></br>
+			<a href="https://course.acciojob.com/journey">contact us</a>
+		</ul>
+	</nav>
+	<heading>3 random videos</heading>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+		
+	</video>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"
+	</video>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
+			</video>
     <script type="text/javascript" src="./script.js">
 </script>
 
