--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"
 	</video>
 	<video controls>
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
 			</video>
     <script type="text/javascript" src="./script.js">
 </script>
