--- a/main.html
+++ b/main.html
@@ -22,11 +22,11 @@
 		
 	</video>
 	<video controls>
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">
 	</video>
 	<video controls>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
-			</video>
+	</video>
     <script type="text/javascript" src="./script.js">
 </script>
 
