--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<nav id="assigment">
 		
 		<ul>
-			<a href="https://course.acciojob.com/journey">Home</a></br>
-			<a href="https://course.acciojob.com/journey">About us</a></br>
-			<a href="https://course.acciojob.com/journey">contact us</a>
+			<li><a href="https://course.acciojob.com/journey">Home</a></li>
+			<li><a href="https://course.acciojob.com/journey">About us</a></li>
+			<li><a href="https://course.acciojob.com/journey">contact us</a></li>
 		</ul>
 	</nav>
 	<heading>3 random videos</heading>
